fixed images and spacing

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html {
 
 body {
     margin: 0;
-    padding: 2rem;
+    padding: 3.5rem;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     background-color: #8EC3B0;
@@ -37,33 +37,29 @@ body {
 
 
 
-.DHC{
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-}
-
-/* The animation code */
-@keyframes example {
-  from {background-color: white;}
-  to {background-color: yellow;}
-}
-
-/* The element to apply the animation to */
-div {
-  width: 100px;
-  height: 100px;
-  background-color: red;
-  animation-name: example;
-  animation-duration: 4s;
-}
-
-
 .dhcText {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.dhcText h3:hover {
+    transform: translate(50px);
+}
+
+
+.DHCimg {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+}
+
+.DHCimg img {
+    width: 25%;
+    height: auto;
+    border-radius: 30px;
 }
 
 
@@ -73,7 +69,20 @@ div {
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
-    
+}
+
+
+.hogImg {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+}
+
+.hogImg img {
+    width: 25%;
+    height: auto;
+    border-radius: 30px;
 }
 
 .tojiText {
@@ -83,18 +92,31 @@ div {
     align-items: center;
 }
 
+.tojiImg {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+}
+
+.tojiImg img {
+    width: 25%;
+    height: auto;
+    border-radius: 30px;
+}
+
 .copyright {
     text-align: left;
     color: #fff;
-    margin: 10rem 0;
-    border-top: 1px solid #fccdd9;
+    margin: 3rem 0;
+    border-top: 2px solid #feeef2;
 }
 
 
 
 
 
-
+/*
 @media (min-width: 800px) {
     .mouche {
         flex-direction: column;
@@ -132,3 +154,5 @@ div {
     }
     
 }
+
+*/
